src/compiler/snapshots/isa__compiler__parser__tests__strings-5.snap
---
source: src/compiler/parser.rs
expression: "create_parser(r#\"\"ba3\\\"\"\"#).parse_expr()"
---
Ok(
    Expr {
        kind: String(
            "ba3\"",
        ),
        span: SpanData { file_id: 0, start: 0, end: 7 },
        ty: (),
    },
)
