src/compiler/snapshots/isa__compiler__parser__tests__strings.snap
---
source: src/compiler/parser.rs
expression: "create_parser(r#\"\"foo\"\"#).parse_expr()"
---
Ok(
    Expr {
        kind: String(
            "foo",
        ),
        span: SpanData { file_id: 0, lo: 0, hi: 5 },
        ty: (),
    },
)
