src/compiler/snapshots/isa__compiler__parser__tests__tuples-2.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"(1,2,3)\").parse_expr()"
---
Ok(
    Expr {
        kind: Tuple(
            [
                Expr {
                    kind: Int(
                        1,
                    ),
                    span: SpanData { file_id: 0, start: 1, end: 2 },
                    ty: (),
                },
                Expr {
                    kind: Int(
                        2,
                    ),
                    span: SpanData { file_id: 0, start: 3, end: 4 },
                    ty: (),
                },
                Expr {
                    kind: Int(
                        3,
                    ),
                    span: SpanData { file_id: 0, start: 5, end: 6 },
                    ty: (),
                },
            ],
        ),
        span: SpanData { file_id: 0, start: 0, end: 7 },
        ty: (),
    },
)
