src/compiler/snapshots/isa__compiler__parser__tests__tuples.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"()\").parse_expr()"
---
Ok(
    Expr {
        kind: Tuple(
            [],
        ),
        span: SpanData { file_id: 0, start: 0, end: 2 },
        ty: (),
    },
)
